# cmus-qt-front-end

./: .gitignore  CMakeLists.txt  Qtmus.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui  qcmusconnection.cpp  qcmusconnection.h  qcmusremote.cpp  qcmusremote.h  qcmussong.cpp  qcmussong.h
